# android33-docker

./: .gitignore  Dockerfile  Readme.md  run-container.bat
androidnodejsembed/: .gitignore  settings.gradle.kts
androidnodejsembed/app/: build.gradle.kts
androidnodejsembed/app/src/androidTest/java/com/wuxianggujun/android_nodejs_embed/: ExampleInstrumentedTest.kt
androidnodejsembed/app/src/main/: AndroidManifest.xml
androidnodejsembed/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
androidnodejsembed/app/src/main/java/com/wuxianggujun/android_nodejs_embed/: MainActivity.kt
androidnodejsembed/app/src/main/java/com/wuxianggujun/android_nodejs_embed/ui/theme/: Color.kt  Theme.kt  Type.kt
androidnodejsembed/app/src/main/res/values/: strings.xml  themes.xml
androidnodejsembed/app/src/test/java/com/wuxianggujun/android_nodejs_embed/: ExampleUnitTest.kt
androidnodejsembed/gradle/wrapper/: gradle-wrapper.properties
